--- a/WPF.QuickStart.UI/Views/ChildTabView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildTabView.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="WPF.QuickStart.UI.Views.ChildTabView"
+﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ChildTabView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ChildTabView" Height="300" Width="300">
+        Height="300" Width="300">
     <Grid>
 
-        <Label Content="Helloooooooooooo !!!!" />
-        <!--<TabControl x:Name="Items"
+        <TabControl x:Name="Items"
                     Grid.Row="1"
                     TabStripPlacement="Left">
             <TabControl.ItemContainerStyle>
@@ -13,7 +12,7 @@
                     <Setter Property="IsEnabled" Value="{Binding IsEnabled}"/>
                 </Style>
             </TabControl.ItemContainerStyle>
-        </TabControl>-->
+        </TabControl>
 
     </Grid>
-</Window>
+</UserControl>
