--- a/WPF.QuickStart.UI/Views/ShellView.xaml
+++ b/WPF.QuickStart.UI/Views/ShellView.xaml
@@ -5,7 +5,8 @@
 
     <DockPanel Width="300" Height="300" Background="LightBlue">
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" HorizontalAlignment="Center">
-            <Button x:Name="ShowRedScreen" Content="Red" Width="50" />
+            <Button x:Name="ShowMultiTabsScreen" Content="Tabs Panel" Width="100" />
+            <Button x:Name="ShowRedScreen" Content="Red" Width="50" Margin="12,0,0,0" />
             <Button x:Name="ShowGreenScreen" Content="Green" Width="50" Margin="12,0,0,0" />
             <Button x:Name="ShowBlueScreen" Content="Blue" Width="50" Margin="12,0,0,0" />
         </StackPanel>
