Intermediary Commit  (not finished ;P)

--- a/WPF.QuickStart.UI/App.xaml
+++ b/WPF.QuickStart.UI/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary>
                     <local:AppBootstrapper x:Key="bootstrapper" />
                 </ResourceDictionary>
+                <ResourceDictionary Source="/Resources/ControlTemplateStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
