--- a/WPF.QuickStart.UI/Views/ShellView.xaml
+++ b/WPF.QuickStart.UI/Views/ShellView.xaml
@@ -3,7 +3,7 @@
         xmlns:cal="http://www.caliburnproject.org"   
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <DockPanel Width="600" Height="500" Background="LightBlue">
+    <DockPanel Width="1000" Height="800" Background="LightBlue">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button x:Name="ShowMultiTabsScreen" Content="Tabs Panel" Width="100" />
             <Button x:Name="ShowRedScreen" Content="Red" Width="50" Margin="12,0,0,0" />
@@ -11,9 +11,9 @@
             <Button x:Name="ShowBlueScreen" Content="Blue" Width="50" Margin="12,0,0,0" />
         </StackPanel>
 
-        <ContentControl DockPanel.Dock="Top" x:Name="ActiveItem" Height="450"/>
+        <ContentControl DockPanel.Dock="Top" x:Name="ActiveItem" Height="750"/>
 
-        <TextBlock x:Name="StatusBar" DockPanel.Dock="Bottom" Text="Status ..."></TextBlock>
+        <TextBlock x:Name="StatusBar" DockPanel.Dock="Bottom" Text="{Binding StatusBarContent}"></TextBlock>
 
     </DockPanel>
 
