--- a/WPF.QuickStart.UI/Views/ChildTabView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildTabView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ChildTabView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Height="300" Width="300">
+        Height="Auto" Width="Auto">
     <Grid>
 
         <TabControl x:Name="Items"
