--- a/WPF.QuickStart.UI/Views/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildView.xaml
@@ -7,7 +7,7 @@
 
         <TextBlock Text="{Binding DisplayName}" FontSize="48" FontWeight="Bold" Foreground="#FF463D" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top" />
 
-        <ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="true" IsExportable="Visible" DockPanel.Dock="Bottom" />
+        <ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" DockPanel.Dock="Bottom" />
 
     </DockPanel>
 
