--- a/WPF.QuickStart.UI/Views/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ChildView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.CustomControls">
+             xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls">
 
     <DockPanel>
 
