--- a/WPF.QuickStart.UI/Views/Common/Dialog/DialogView.xaml
+++ b/WPF.QuickStart.UI/Views/Common/Dialog/DialogView.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.CustomControls"
+    xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
     xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
     ResizeMode="NoResize" SizeToContent="WidthAndHeight" 
     Icon="{Binding SmallIcon}" WindowStartupLocation="CenterOwner">
