--- a/WPF.QuickStart.UI/Views/ShellView.xaml
+++ b/WPF.QuickStart.UI/Views/ShellView.xaml
@@ -1,9 +1,10 @@
 <Window x:Class="WPF.QuickStart.UI.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:cal="http://www.caliburnproject.org"   
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Style="{StaticResource WindowStyle}">
 
-    <DockPanel Width="1000" Height="800" Background="LightBlue">
+    <DockPanel Background="LightBlue">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button x:Name="ShowMultiTabsScreen" Content="Tabs Panel" Width="100" />
             <Button x:Name="ShowRedScreen" Content="Red" Width="50" Margin="12,0,0,0" />
@@ -13,7 +14,7 @@
 
         <ContentControl DockPanel.Dock="Top" x:Name="ActiveItem" Height="750"/>
 
-        <TextBlock x:Name="StatusBar" DockPanel.Dock="Bottom" Text="{Binding StatusBarContent}"></TextBlock>
+        <TextBlock x:Name="StatusBar" DockPanel.Dock="Bottom" Text="{Binding StatusBarContent}" HorizontalAlignment="Left" Width="Auto" Height="Auto" Background="Red" />
 
     </DockPanel>
 
