--- a/WPF.QuickStart.UI/Views/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildView.xaml
@@ -3,16 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls">
 
-    <DockPanel>
+    <StackPanel>
 
-        <TextBlock Text="{Binding DisplayName}" FontSize="48" FontWeight="Bold" Foreground="#FF463D" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top" />
+        <TextBlock Text="{Binding DisplayName}" FontSize="20" FontWeight="Bold" Foreground="#FF463D" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-        <ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />
+        <!--<ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />-->
 
-        <Button x:Name="ConnectBtn" Content="Connected" IsEnabled="{Binding !Connected}" />
+        <StackPanel Orientation="Horizontal">
+            <Button x:Name="ConnectBtn" Content="Connected" IsEnabled="{Binding !Connected}" HorizontalAlignment="Left" />
+            <Button x:Name="GetDataSourceList" Content="GetDataSourceList" IsEnabled="{Binding Connected}" />
+        </StackPanel>        
 
-        <Button x:Name="GetDataSourceList" Content="GetDataSourceList" IsEnabled="{Binding Connected}" />
-
-    </DockPanel>
+    </StackPanel>
 
 </UserControl>
