--- a/WPF.QuickStart.UI/Resources/Shared.xaml
+++ b/WPF.QuickStart.UI/Resources/Shared.xaml
@@ -46,12 +46,15 @@
     <Style x:Key="baseStyle" TargetType="{x:Type Control}">
         <Setter Property="Width" Value="120" />
         <Setter Property="Height" Value="30" />
+        <Setter Property="Margin" Value="10,5,10,5" />
         <!--<Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />-->
     </Style>
 
     <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type TextBox}">
+        <Setter Property="Width" Value="150" />
+        
     </Style>
 
     <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type Button}">
@@ -63,7 +66,8 @@
 
     <Style TargetType="{x:Type TextBlock}">
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Width" Value="250" />
+        <Setter Property="Width" Value="Auto" />
+        <Setter Property="Height" Value="30" />
     </Style>
 
 </ResourceDictionary>
