--- a/WPF.QuickStart.UI/Views/HistoricalQuoteView.xaml
+++ b/WPF.QuickStart.UI/Views/HistoricalQuoteView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ChildView"
+﻿<UserControl x:Class="WPF.QuickStart.UI.Views.HistoricalQuoteView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
@@ -11,17 +11,15 @@
         <!--<ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />-->
 
         <StackPanel Orientation="Horizontal">
-            <StackPanel.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FFC30C0C" Offset="1"/>
-                </LinearGradientBrush>
-            </StackPanel.Background>
-            <DockPanel Width="800">
-                <Button x:Name="ConnectBtn" Content="Connected" IsEnabled="{Binding !Connected}" DockPanel.Dock="Left" />
-                <Button x:Name="GetDataSourceList" Content="GetDataSourceList" IsEnabled="{Binding Connected}" HorizontalAlignment="Right" />
+            <DockPanel Width="1000">
+                <TextBox x:Name="SecurityCode" DockPanel.Dock="Left" />
+                <TextBlock x:Name="StartDateTxt" Text="Start Date" />
+                <xctk:DateTimePicker x:Name="StartDate" Format="ShortDate" Value="{Binding StartDate}" Width="150" Margin="10 5 10 5" />
+                <TextBlock x:Name="EndDateTxt" Text="End Date" />
+                <xctk:DateTimePicker x:Name="EndDate" Format="ShortDate" Value="{Binding EndDate}" Width="150" Margin="10 5 10 5" />
+                <Button x:Name="Load" Content="Load historical quotes" HorizontalAlignment="Right" />
             </DockPanel>
-            
+
         </StackPanel>
 
         <Grid>
@@ -37,8 +35,10 @@
                     <xcdg:TableflowView FixedColumnCount="2" />
                 </xcdg:DataGridControl.View>-->
 
-                <!--<xcdg:DataGridControl.Columns>
-                    --><!--Preconfigure the OrderID Column of the grid with CellValidationRule. --><!--
+            <!--<xcdg:DataGridControl.Columns>
+                    -->
+            <!--Preconfigure the OrderID Column of the grid with CellValidationRule. -->
+            <!--
                     <xcdg:Column FieldName="OrderID"
                          IsMainColumn="True">
                         <xcdg:Column.CellValidationRules>
@@ -49,8 +49,6 @@
 
         </Grid>
 
-        <TextBlock Text="{Binding DisplayName}" FontSize="20" FontWeight="Bold" Foreground="#FF463D" HorizontalAlignment="Left" />
-
     </StackPanel>
 
-</UserControl>
+</UserControl>    
