--- a/WPF.QuickStart.UI/Resources/Shared.xaml
+++ b/WPF.QuickStart.UI/Resources/Shared.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                    xmlns:converter="clr-namespace:WPF.QuickStart.UI.CustomControls.Converters"
+                    xmlns:converter="clr-namespace:WPF.QuickStart.UI.Converters"
                     xmlns:ignore="dummy"
                     mc:Ignorable="ignore">
 
@@ -9,6 +9,7 @@
 
     <converter:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
     <converter:InverseBooleanConverter x:Key="inverseBoolConverter" />
+    <converter:BackgroundConverter x:Key="backgroundConverter" />
 
     <!-- Custom Color Palette -->
     <Color x:Key="AquaBlueColor">#FFA3C3EC</Color>
@@ -35,39 +36,49 @@
     <!-- End Custom Color Palette -->
 
     <Style x:Key="WindowStyle" TargetType="Window">
-        <Setter Property="Width" Value="1000" />
+        <Setter Property="Width" Value="Auto" />
         <Setter Property="Height" Value="800" />
         <Setter Property="MinWidth" Value="800" />
         <Setter Property="MinHeight" Value="600" />
         <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
-        <Setter Property="WindowState" Value="Maximized" />
+        <!--<Setter Property="WindowState" Value="Maximized" />-->
     </Style>
 
     <Style x:Key="baseStyle" TargetType="{x:Type Control}">
-        <Setter Property="Width" Value="120" />
-        <Setter Property="Height" Value="30" />
-        <Setter Property="Margin" Value="10,5,10,5" />
-        <!--<Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="VerticalAlignment" Value="Center" />-->
+        <!--<Setter Property="Width" Value="120" />-->
+        <Setter Property="Height" Value="25" />
+    </Style>
+
+    <Style x:Key="baseStyleTextBlock" TargetType="{x:Type TextBlock}">
+        <!-- Styles below are applied to all Textblocks, including the ones inside control (visual styles tree) -->
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Width" Value="Auto" />
+        <Setter Property="Margin" Value="10,0" />
     </Style>
 
     <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type TextBox}">
-        <Setter Property="Width" Value="150" />
-        
     </Style>
 
     <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type Button}">
-        <Setter Property="Margin" Value="5,5,5,5" />
+        <Setter Property="Width" Value="Auto" />
+        <Setter Property="Padding" Value="8,1,8,1" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="Margin" Value="10,0" />
     </Style>
 
     <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type ComboBox}">
+        <Setter Property="Width" Value="250" />
     </Style>
 
-    <Style TargetType="{x:Type TextBlock}">
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Width" Value="Auto" />
-        <Setter Property="Height" Value="30" />
+    <Style BasedOn="{StaticResource baseStyleTextBlock}" TargetType="{x:Type TextBlock}">  
     </Style>
+
+    <Style x:Key="HeaderStyle" BasedOn="{StaticResource baseStyleTextBlock}" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="Margin" Value="5,10" />
+    </Style>    
 
 </ResourceDictionary>
