--- a/WPF.QuickStart.UI/Views/ShellView.xaml
+++ b/WPF.QuickStart.UI/Views/ShellView.xaml
@@ -5,11 +5,12 @@
         Style="{StaticResource WindowStyle}">
 
     <DockPanel Background="LightBlue">
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button x:Name="ShowMultiTabsScreen" Content="Tabs Panel" Width="100" />
-            <Button x:Name="ShowRedScreen" Content="Red" Width="50" Margin="12,0,0,0" />
-            <Button x:Name="ShowGreenScreen" Content="Green" Width="50" Margin="12,0,0,0" />
-            <Button x:Name="ShowBlueScreen" Content="Blue" Width="50" Margin="12,0,0,0" />
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
+            <Button x:Name="ShowMultiTabsScreen" Content="Tabs Panel" />
+            <Button x:Name="ShowRedScreen" Content="Historical Data" />
+            <Button x:Name="ShowGreenScreen" Content="Connect Data Yahoo" />
+            <Button x:Name="ShowTwitterViewByScreen" Content="View Tweets By" />
+            <Button x:Name="ShowBlueScreen" Content="Twitter Summary" />
         </StackPanel>
 
         <ContentControl DockPanel.Dock="Top" x:Name="ActiveItem" Height="750"/>
