--- a/WPF.QuickStart.UI/Views/TwitterView.xaml
+++ b/WPF.QuickStart.UI/Views/TwitterView.xaml
@@ -2,65 +2,88 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="http://www.caliburnproject.org"   
-             xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls">
+             xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid">
     <UserControl.Resources>
         <ResourceDictionary>
-            <!--<ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ViewResources.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            <ControlTemplate x:Key="validationTemplate">
-                ...
-            </ControlTemplate>
-            <style x:key="textBoxWithError" TargetType="{x:Type TextBox}">
-                ...
-            </style>-->
             <x:Array x:Key="countElements" Type="sys:String" 
             xmlns:sys="clr-namespace:System;assembly=mscorlib">
-                <sys:String>10</sys:String>
                 <sys:String>20</sys:String>
-                <sys:String>30</sys:String>
-                <sys:String>40</sys:String>
                 <sys:String>50</sys:String>
+                <sys:String>100</sys:String>
             </x:Array>
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Width="500" Height="Auto">
+    <Grid Width="Auto" Height="Auto" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="300" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="500" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+
+        <StackPanel Grid.Column="0" Grid.Row="0">
+            <TextBlock Text="Twitter View By ..." Style="{StaticResource HeaderStyle}"/>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Screen name : "/>
-                <TextBox x:Name="ScreenName" />
+                <TextBlock Text="Screen name : " Width="159"/>
+                <ComboBox 
+                    x:Name="ScreenNameCombo" 
+                    ItemsSource="{Binding TwitterScreenNames}" 
+                    SelectedValue="{Binding ScreenName, Mode=TwoWay}" 
+                    cal:Message.Attach="[Event SelectionChanged] = [Action ScreenNameSelectionChanged($this,$eventArgs)]">
+                </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Margin="0,10">
                 <TextBlock Text="Number of tweets to display : "/>
                 <ComboBox 
                     x:Name="CountCombo" 
-                    ItemsSource="{StaticResource countElements}" 
-                    SelectedValue="{Binding Count, Mode=TwoWay}" 
-                    cal:Message.Attach="[Event SelectionChanged] = [Action CountSelectionChanged($this,$eventArgs)]">
+                    ItemsSource="{Binding CountElements}" 
+                    IsSynchronizedWithCurrentItem="True"
+                    cal:Message.Attach="[Event SelectionChanged] = [Action CountSelectionChanged($this,$eventArgs)]" Width="58">
                 </ComboBox>
-            </StackPanel>            
+            </StackPanel>
 
-            <Button x:Name="Load" Content="Load Tweets" HorizontalAlignment="Left" />
-
+            <Button x:Name="Load" Content="Load Tweets" />
         </StackPanel>
 
-        <DataGrid
+        <!--<DataGrid 
             Grid.Column="0" Grid.Row="1"
             AutoGenerateColumns="True"
             Width="Auto"
+            Margin="0,10"
             ItemsSource="{Binding Tweets}"
             ScrollViewer.CanContentScroll="True" 
             ScrollViewer.VerticalScrollBarVisibility="Auto"
             ScrollViewer.HorizontalScrollBarVisibility="Auto">
-        </DataGrid>
+        </DataGrid>-->
+
+        <xcdg:DataGridControl 
+            x:Name="_dataGrid"
+            Grid.Column="0" Grid.Row="2"
+            MinHeight="400"
+            MinWidth="1000"
+            Width="Auto"
+            Margin="0,10"
+            AutoCreateColumns="False"
+            ItemsSource="{Binding Tweets}">
+
+            <xcdg:DataGridControl.Columns>
+                <xcdg:Column Title="Date" FieldName="Date" VisiblePosition="0"/>
+                <xcdg:Column Title="Status" FieldName="Text" VisiblePosition="1"/>
+            </xcdg:DataGridControl.Columns>
+            <xcdg:DataGridControl.View>
+                <xcdg:TableView ColumnStretchMode="All"
+                        FixedColumnCount="2" />
+            </xcdg:DataGridControl.View>
+
+        </xcdg:DataGridControl>
+
     </Grid>
 
 </UserControl>
