--- a/WPF.QuickStart.UI/Views/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ChildView.xaml
@@ -8,6 +8,8 @@
 
     <StackPanel Height="400">
 
+        <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}"/>
+
         <!--<ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />-->
 
         <StackPanel Orientation="Horizontal">
