--- a/WPF.QuickStart.UI/Views/Yahoo/ChildTabYahooView.xaml
+++ b/WPF.QuickStart.UI/Views/Yahoo/ChildTabYahooView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ChildTabView"
+﻿<UserControl x:Class="WPF.QuickStart.UI.Views.Twitter.ChildTabYahooView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Height="Auto" Width="Auto">
