--- a/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
+++ b/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WPF.QuickStart.UI.Views.HistoricalQuoteView"
+﻿<UserControl x:Class="WPF.QuickStart.UI.Views.Yahoo.HistoricalQuoteView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
@@ -8,16 +8,18 @@
 
     <StackPanel Height="Auto">
 
+        <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}"/>
+
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
             <TextBlock x:Name="SecurityCodeTxt" Text="Security Code" />
-            <TextBox x:Name="SecurityCode" Width="134" />
+                <ctrl:TextBoxWatermarked x:Name="SecurityCode"  Width="134" ToolTip="Input code. Exple : YHOO, MSCI .." Watermark="YHOO" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10">
                 <TextBlock x:Name="StartDateTxt" Text="Start Date" Width="74" />
                 <xctk:DateTimePicker x:Name="StartDate" Format="ShortDate" Value="{Binding StartDate}" Width="150" Margin="0 5 10 5" Height="25" />
                 <TextBlock x:Name="EndDateTxt" Text="End Date" />
-                <xctk:DateTimePicker x:Name="EndDate" Format="ShortDate" Value="{Binding EndDate}" Width="150" Margin="0 5 10 5" Height="25" />
+                <xctk:DateTimePicker x:Name="EndDate" Format="ShortDate" Value="{Binding EndDate}" Width="150" Margin="0 5 10 5" Height="25" Tag="" />
             </StackPanel>
             <Button x:Name="Load" Content="Load historical quotes" />
         </StackPanel>
